@@ -253,16 +253,11 @@ module ActionController #:nodoc:
     DEFAULT_RENDER_STATUS_CODE = "200 OK"
 
     include StatusCodes
-
-    # Determines whether the view has access to controller internals @request, @response, @session, and @template.
-    # By default, it does.
-    @@view_controller_internals = true
-    cattr_accessor :view_controller_internals
-
-    # Protected instance variable cache
-    @@protected_variables_cache = nil
-    cattr_accessor :protected_variables_cache
-
+    
+    # Controller specific instance variables which will not be accessible inside views.
+    @@protected_view_variables = %w(@assigns @performed_redirect @performed_render @variables_added @request_origin @url @parent_controller
+                                    @action_name @before_filter_chain_aborted @action_cache_path)
+    
     # Prepends all the URL-generating helpers from AssetHelper. This makes it possible to easily move javascripts, stylesheets,
     # and images to a dedicated asset server away from the main web server. Example:
     #   ActionController::Base.asset_host = "http://assets.example.com"
@@ -1194,7 +1189,6 @@ module ActionController #:nodoc:
       def add_variables_to_assigns
         unless @variables_added
           add_instance_variables_to_assigns
-          add_class_variables_to_assigns if view_controller_internals
           @variables_added = true
         end
       end
@@ -1208,27 +1202,8 @@ module ActionController #:nodoc:
       end
 
       def add_instance_variables_to_assigns
-        @@protected_variables_cache ||= Set.new(protected_instance_variables)
-        instance_variable_names.each do |var|
-          next if @@protected_variables_cache.include?(var)
+        (instance_variable_names - @@protected_view_variables).each do |var|
           @assigns[var[1..-1]] = instance_variable_get(var)
-        end
-      end
-
-      def add_class_variables_to_assigns
-        %w(view_paths logger).each do |cvar|
-          @assigns[cvar] = self.send(cvar)
-        end
-      end
-
-      def protected_instance_variables
-        if view_controller_internals
-          %w(@assigns @performed_redirect @performed_render)
-        else
-          %w(@assigns @performed_redirect @performed_render
-             @_request @request @_response @response @_params @params
-             @_session @session @_cookies @cookies
-             @template @request_origin @parent_controller)
         end
       end
 
