@@ -529,26 +529,10 @@ class NewRenderTest < Test::Unit::TestCase
   end
 
   def test_access_to_request_in_view
-    view_internals_old_value = ActionController::Base.view_controller_internals
-
-    ActionController::Base.view_controller_internals = false
-    ActionController::Base.protected_variables_cache = nil
-
-    get :hello_world
-    assert !assigns.include?('_request'), '_request should not be in assigns'
-    assert !assigns.include?('request'), 'request should not be in assigns'
-
-    ActionController::Base.view_controller_internals = true
-    ActionController::Base.protected_variables_cache = nil
-
     get :hello_world
     assert !assigns.include?('request'), 'request should not be in assigns'
     assert_kind_of ActionController::AbstractRequest, assigns['_request']
     assert_kind_of ActionController::AbstractRequest, @response.template.request
-
-  ensure
-    ActionController::Base.view_controller_internals = view_internals_old_value
-    ActionController::Base.protected_variables_cache = nil
   end
 
   def test_render_xml
