@@ -1,5 +1,7 @@
 *SVN*
 
+* Remove ActionController::Base#view_controller_internals flag. [Pratik]
+
 * Add conditional options to caches_page method. [Paul Horsfall]
 
 * Move missing template logic to ActionView. [Pratik]
